estrutura base html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         </style>
     </head>
     <body>
-        hello word
+    <label>00</label>
+    <label>:</label>    
+    <label>00</label>   
+    <label>:</label>    
+    <label>00</label>   
+    <div>
+        <button>inciar</button>
+        <button>parar</button>
+        <button>zerar</button>
+    </div>
     </body>
 </html>
