--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
         <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
         <title>cronometro</title>
-        <style>
-            body{
-                background-color: black;
-                color: white;
-            }
-        </style>
+        
     </head>
     <body>
+        <div class="numeros">
     <label>00</label>
     <label>:</label>    
     <label>00</label>   
     <label>:</label>    
     <label>00</label>   
+</div>
     <div>
-        <button>inciar</button>
-        <button>parar</button>
-        <button>zerar</button>
+
+        <button class="verde">inciar</button>
+        <button class="amarelo">parar</button>
+        <button class="vermelho">zerar</button>
     </div>
     </body>
 </html>
